kubernetes-istio-scripts/kubernetes/affinity/devops-affinity-1.yml
apiVersion: v1
kind: Namespace
metadata:
  name:  devops
  labels:
    istio-injection: enabled

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops
  name: affinity-deployment-blue
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: cloud.google.com/gke-nodepool
            operator: In
            values:
            - pool-invalid
  selector:
    matchLabels:
      app: affinity-blue
  template:
    metadata:
      labels:
        app: affinity-blue
        version: 1.0.0
      annotations:
        # These 3 annotations are optional for gathering prometheus metrics
        prometheus.io/scrape: "true"
        prometheus.io/port: "8111"
        prometheus.io/path: /devops/blue/actuator/prometheus
        # Open telemetry sidecar
        sidecar.opentelemetry.io/inject: "otel-sidecar"
        instrumentation.opentelemetry.io/inject-java: "true"
    spec:
      containers:
      - name: devops-blue
        image: timpamungkas/devops-blue:1.0.0
        resources:
          requests:
            cpu: "0.02"
            memory: 32Mi
          limits:
            cpu: "0.3"
            memory: 384Mi
        ports:
        - name:  http
          containerPort: 8111
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /devops/blue/actuator/health/readiness
            port: 8111
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
        livenessProbe:
          httpGet:
            path: /devops/blue/actuator/health/liveness
            port: 8111
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
  replicas: 1

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops
  name: affinity-deployment-yellow
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: cloud.google.com/gke-nodepool
            operator: NotIn
            values:
            - pool-standard
  selector:
    matchLabels:
      app: affinity-yellow
  template:
    metadata:
      labels:
        app: affinity-yellow
        version: 1.0.0
      annotations:
        # These 3 annotations are optional for gathering prometheus metrics
        prometheus.io/scrape: "true"
        prometheus.io/port: "8112"
        prometheus.io/path: /devops/yellow/actuator/prometheus
        # Open telemetry sidecar
        sidecar.opentelemetry.io/inject: "otel-sidecar"
        instrumentation.opentelemetry.io/inject-java: "true"
    spec:
      containers:
      - name: devops-yellow
        image: timpamungkas/devops-yellow:1.0.0
        resources:
          requests:
            cpu: "0.02"
            memory: 32Mi
          limits:
            cpu: "0.3"
            memory: 384Mi
        ports:
        - name:  http
          containerPort: 8112
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /devops/yellow/actuator/health/readiness
            port: 8112
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
        livenessProbe:
          httpGet:
            path: /devops/yellow/actuator/health/liveness
            port: 8112
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
  replicas: 1

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops
  name: affinity-deployment-white
spec:
  affinity:
    nodeAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: cloud.google.com/gke-nodepool
            operator: In
            values:
            - pool-invalid
  selector:
    matchLabels:
      app: affinity-white
  template:
    metadata:
      labels:
        app: affinity-white
        version: 1.0.0
      annotations:
        # These 3 annotations are optional for gathering prometheus metrics
        prometheus.io/scrape: "true"
        prometheus.io/port: "8113"
        prometheus.io/path: /devops/white/actuator/prometheus
        # Open telemetry sidecar
        sidecar.opentelemetry.io/inject: "otel-sidecar"
        instrumentation.opentelemetry.io/inject-java: "true"
    spec:
      containers:
      - name: devops-white
        image: timpamungkas/devops-white:1.0.0
        resources:
          requests:
            cpu: "0.02"
            memory: 32Mi
          limits:
            cpu: "0.3"
            memory: 384Mi
        ports:
        - name:  http
          containerPort: 8113
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /devops/white/actuator/health/readiness
            port: 8113
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
        livenessProbe:
          httpGet:
            path: /devops/white/actuator/health/liveness
            port: 8113
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
  replicas: 1

---

apiVersion: v1
kind: Service
metadata:
  namespace: devops
  name: devops-blue-clusterip
  labels:
    app: affinity-blue
    version: 1.0.0
spec:
  selector:
    app: affinity-blue
    version: 1.0.0
  ports:
  - port: 8111
    name: http

---

apiVersion: v1
kind: Service
metadata:
  namespace: devops
  name: devops-yellow-clusterip
  labels:
    app: affinity-yellow
    version: 1.0.0
spec:
  selector:
    app: affinity-yellow
    version: 1.0.0
  ports:
  - port: 8112
    name: http

---

apiVersion: v1
kind: Service
metadata:
  namespace: devops
  name: devops-white-clusterip
  labels:
    app: affinity-white
    version: 1.0.0
spec:
  selector:
    app: affinity-white
    version: 1.0.0
  ports:
  - port: 8113
    name: http

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: devops
  name: ingress-affinity-nginx-blue
  labels:
    app.kubernetes.io/name: ingress-affinity-nginx-blue
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /devops/blue
        pathType: Prefix
        backend:
          service:
            name: devops-blue-clusterip
            port:
              number: 8111
